Added naming exceptions

--- a/ignored_from_view.yaml
+++ b/ignored_from_view.yaml
@@ -10,7 +10,7 @@
  - "[Genome] [Outgroup] Neodiprion lecontei - GCA 001263575.1"
  - "[Genome] [Outgroup] Orussus abietinus - GCA 000612105.1"
  - "[Genome] [Outgroup] Trichogramma pretiosum - GCA 000599845.1"
- - "[Genome] Solenopsis invicta - 454200"
+ - "[Genome] Solenopsis invicta - Si_gnF.454200"
  - "[Genome] [Outgroup] Apis dorsata - GCA 000469605.1"
  - "[Genome] [Outgroup] Apis florea - GCA 000184785.1"
  - "[Genome] [Outgroup] Apis mellifera - GCA 000819425.1"
