--- a/AppImage/recipe.yml
+++ b/AppImage/recipe.yml
@@ -4,29 +4,12 @@ ingredients:
   dist: xenial
   sources:
     - deb http://us.archive.ubuntu.com/ubuntu/ xenial xenial-updates xenial-security main universe
-    - deb http://us.archive.ubuntu.com/ubuntu/ xenial-updates main universe
-    - deb http://us.archive.ubuntu.com/ubuntu/ xenial-security main universe
   packages:
     - ruby
     - ruby-dev
     - build-essential
 script:
   - usr/bin/gem install --pre --install-dir var/lib/gems/2.3.0 sequenceserver
-  - cp ~/scratch/2019-12-11-seqserv/src/bin/* var/lib/gems/2.3.0/gems/sequenceserver-2.0.0.beta3/bin
-  - cat > usr/bin/sequenceserver <<EOF
-  - export GEM_PATH=\$APPDIR/var/lib/gems/2.3.0
-  - ruby -e 'load Gem.bin_path("sequenceserver", "sequenceserver")'
-  - EOF
-  - chmod +x usr/bin/sequenceserver
-script:
-  - cp ${PWD}/../../AppImage/favicon.png .
-  - cat > sequenceserver.desktop <<EOF
-  - [Desktop Entry]
-  - Version=1.0
-  - Type=Application
-  - Name=SequenceServer
-  - Icon=favicon
-  - Exec=sequenceserver %F
-  - Terminal=true
-  - Categories=ConsoleOnly;Science;
-  - EOF
+  - cp ${PWD}/../../../AppImage/sequenceserver.sh usr/bin/sequenceserver
+  - cp ${PWD}/../../../AppImage/sequenceserver.desktop .
+  - cp ${PWD}/../../../AppImage/sequenceserver.png .
